--- a/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
+++ b/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
@@ -257,7 +257,7 @@ IF TCVARn:0 > 0
 				CALL CLOTH_BATTLE_DAMAGE, 8 * (LOCAL:1 + LOCAL:10 / 2000) / 10
 
 				;방어 시의 응원
-				;IF TCVARn:2 == 자세：반격 || TCVAR:2 == 자세：강화반격
+				;IF TCVARn:2 == 자세：반격 || TCVARn:2 == 자세：강화반격
 				;	CALL PERFORM_CHEERS_TENTACLE_GUARD_HANTEI
 				;피격 시의 응원
 				SIF CONFIG_CHECK_EVENT_F(3) > 0
