--- a/ERB/무기및의상/무기_커스터마이즈_관련/FIGHT_STYLE.ERB
+++ b/ERB/무기및의상/무기_커스터마이즈_관련/FIGHT_STYLE.ERB
@@ -139,7 +139,7 @@ SELECTCASE FSTYLE_NAME_F(ARG,ARG:1)
 		RESULTS:2 = BURST 성능 ：위력이 더욱 상승하며, 명중률이 감소한다
 	CASE "반격"
 		RESULTS:0 = 위력 영향도：공격*0.70 + 방어*0.50
-		RESULTS:1 = 추가 효과　：공격 후 반격 준비, 이후 방어 혹은 회피 성공 시 반격　「방어」→「반격」커맨드 변경 및 성능 강화
+		RESULTS:1 = 추가 효과　：공격 후 반격 준비, 이후 방어 혹은 회피 성공 시 반격　「방어」커맨드 효과 변경
 		RESULTS:2 = BURST 성능 ：전투 중에 반격을 성공시켜 축적한 피해량을 더한 일격을 가한다
 	CASE "광역"
 		RESULTS:0 = 위력 영향도：공격*1.20
