--- a/ERB/지문/MESSAGE_BATTLE.ERB
+++ b/ERB/지문/MESSAGE_BATTLE.ERB
@@ -1231,7 +1231,7 @@ ENDCATCH
 PRINTDATAL 
 	DATAFORM %PRINT_TRANSCALLNAME(TARGET)%의 신체가 %CSTR:TARGET:(TCVARn:0 + 4)%에 축적된 막대한 에너지를 완전히 제어할 수 없었다！
 	DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% %조사처리(CSTR:TARGET:(TCVARn:0 + 4),"가")% 방출해 낸 에너지의 반동으로 피해를 입었다！
-	DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 감당할 수 없을 정도로 축적된 %CSTR:TARGET:(TCVARn:0 + 4)%의 에너지에 의해 내상을 입었다！
+	DATAFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 이미 에너지 축적 한도를 넘어선 %CSTR:TARGET:(TCVARn:0 + 4)%의 에너지에 의해 내상을 입었다！
 ENDDATA
 ;구상
 TRYCCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_TENTACLE_ATTACK_OVERCHARGE")
