--- a/ERB/캐릭터관련/CHARA_STATE_CHANGE.ERB
+++ b/ERB/캐릭터관련/CHARA_STATE_CHANGE.ERB
@@ -13,16 +13,14 @@ SIF CFLAG:1 == 2
 SIF TALENT:타고난전사 > 0
 	RETURN 0
 LOCAL:0 = 0
-;본래 조건문에 ARG < 100 도 있었는데, 100% 확률은 확정으로 걸린다고 하려는 의도였던 것 같다
-;근데 이 함수는 피해량에 따른 기절이라 ARG가 피해량 수치 그대로 넘어와서 거의 모든 상황에서 적용이 안 되므로 제외했다
-SIF TALENT:축복 > 0 && RAND:2 == 0
+SIF TALENT:축복 > 0 && ARG < 100 && RAND:2 == 0
 	RETURN 0
 CALL PERCENT_CAL, ARG, MAXBASE:체력
 ;절대 방어일 경우 상태 이상 무효
 SIF TCVARn:200 > 0
 	RETURN 0
-;통상 반격 또는 강화 반격의 경우 피해량이 최대 체력의 20% 이하라면 기절에 면역
-SIF (TCVARn:2 == 자세：반격 || TCVARn:2 == 자세：강화반격) && RESULT <= 20
+;통상 반격 또는 강화 반격의 경우 피해량이 최대 체력의 15% 이하라면 기절에 면역
+SIF (TCVARn:2 == 자세：반격 || TCVARn:2 == 자세：강화반격) && RESULT <= 15
 	RETURN 0
 SIF RESULT >= 30
 	LOCAL:0 += MAX(RESULT - 30, 0) / 4
