--- a/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
+++ b/ERB/게임_내_전투처리/ENEMY_ACTION.ERB
@@ -96,7 +96,7 @@ IF TCVARn:0 > 0
 				;치명타 판정
 				;FEAT 효과에 의한 피치명타 방지
 				;반격의 경우 10% 확률로 치명타 피해를 입는다
-				ELSEIF RAND:100 < 5 || (RAND:100 < 10 && TCVARn:2 == 자세：반격) && (FSTYLE_NAME_F(TARGET,TCVARn:0) != "장갑" && TALENT:타고난전사 == 0)
+				ELSEIF TALENT:타고난전사 == 0 && (RAND:100 < 5 && FSTYLE_NAME_F(TARGET,TCVARn:0) != "장갑") || (RAND:100 < 10 && TCVARn:2 == 자세：반격)
 					LOCAL:1 = 15
 					;지문: 적 캐릭터의 공격이 치명타 히트
 					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_CRITICAL_HIT
@@ -110,7 +110,7 @@ IF TCVARn:0 > 0
 					;지문: 적 캐릭터의 공격을 방어
 					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_GUARD
 					;지문: 세뇌/흑화 캐릭터의 공격이 방어됐다
-					SIF FLAG:110
+					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
 						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_GUARD
 
 				ELSE
@@ -131,22 +131,8 @@ IF TCVARn:0 > 0
 				CALL CLOTH_BATTLE_HOSEI, "TAIRYOKU"
 				LOCAL:2 = LOCAL:2 * RESULT / 100
 
-				;[교란] 스타일의 입는 피해량 증대
-				IF FSTYLE_NAME_F(TARGET,TCVARn:0) == "교란"
-					TIMES LOCAL:2, 1.15
-				;[장갑] 스타일의 입는 피해량 경감
-				ELSEIF FSTYLE_NAME_F(TARGET,TCVARn:0) == "장갑"
-					TIMES LOCAL:2, 0.85
-				;[전력] 버스트 공격의 입는 피해량 증대
-				ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "전력"
-					TIMES LOCAL:2, 1.25
-				;[반격] 버스트 공격의 입는 피해량 증대, 우선 더 늘릴지 말지는 지켜보자
-				;ELSEIF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
-				;	TIMES LOCAL:2, 1.25
-				ENDIF
-				
 				[SKIPSTART]
-				;[반격] 스타일의 버스트 공격 효과 처리를 위해 순서를 피해량 계산 뒤로 옮긴다
+				;절대 방어의 효과 처리를 위해 순서를 피해량 계산 뒤로 옮긴다
 				;체력 피해에 의한 SOURCE 획득
 				IF (100 * LOCAL:2 / MAXBASE:체력) < 5
 					LOCAL:8 = 0
@@ -191,14 +177,13 @@ IF TCVARn:0 > 0
 				[SKIPEND]
 
 				FONTBOLD
-				IF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
+				IF FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
 					PRINTFORML {LOCAL:2}의 피해가 축적됐다！
 				ELSEIF TCVARn:200 > 0
 					PRINTFORML {LOCAL:2}의 피해를 무효화했다！
 				ELSE
 					PRINTFORML {LOCAL:2}의 피해를 입었다！
 				ENDIF
-				FONTREGULAR
 				PRINTL 
 				
 				;절대 방어일 경우 캐릭터가 직격당하는 것이 아니라고 판단하고 피해량, SOURCE 처리를 스킵한다
@@ -252,6 +237,7 @@ IF TCVARn:0 > 0
 				LOCAL:11 += LOCAL:2 / 4
 
 				$KOUGEKI_SKIP
+				FONTREGULAR
 				
 				;의상에의 피해
 				CALL CLOTH_BATTLE_DAMAGE, 8 * (LOCAL:1 + LOCAL:10 / 2000) / 10
@@ -272,7 +258,7 @@ IF TCVARn:0 > 0
 				CALL STATE_CHANGE_KIZETU_DAMAGE, LOCAL:2
 
 				;절대 방어일 경우 심경이 고양으로 변하기 쉽다
-				;심경 변화: 고양
+				;심경 변화：고양
 				IF TCVARn:200 > 0
 					CALL SHINKYOU_CHANGE, "KOUYOU"
 				;심경 변화：분노 혹은 체념
@@ -357,7 +343,7 @@ IF TCVARn:0 > 0
 				BASE:체력 -= LOCAL:2
 
 				;기력 뺄셈　현재는 고정으로 -50
-				IF TCVARn:2 == 자세：방어 || TCVARn:2 == 자세：반격
+				IF TCVARn:2 == 자세：방어
 					LOCAL:3 = 25
 				ELSE
 					LOCAL:3 = 50
@@ -448,7 +434,7 @@ IF TCVARn:0 > 0
 					;지문: 적 캐릭터의 공격을 절대 방어
 					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
 					;지문: 세뇌/흑화 캐릭터의 공격이 절대 방어됐다
-					SIF FLAG:110
+					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
 						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
 
 				ELSE
@@ -531,14 +517,12 @@ IF TCVARn:0 > 0
 				;	TIMES LOCAL:3, 1.25
 				ENDIF
 				FONTBOLD
-				IF GETBIT(TCVARn:217, 0) && FSTYLE_NAME_F(TARGET,TCVARn:0) == "반격"
-					PRINTFORML {LOCAL:2}의 피해가 축적됐다！
-				ELSEIF TCVARn:200 > 0
+				IF TCVARn:200 > 0
 					PRINTFORML {LOCAL:2}의 피해를 무효화했다！
 				ELSE
 					PRINTFORML {LOCAL:2}의 피해를 입었다！
+					PRINTFORML %BASENAME:1%이 {LOCAL:3} 줄었다！
 				ENDIF
-				FONTREGULAR
 
 				;절대 방어일 경우 체력 피해량 처리를 스킵한다
 				SIF TCVARn:200 > 0
@@ -548,20 +532,16 @@ IF TCVARn:0 > 0
 					LOCAL:2 = BASE:체력
 				BASE:체력 -= LOCAL:2
 
-				$TAIEKI_SKIP
-				
-				FONTBOLD
-				IF GAME_OPTION_CHECK_F(OPTION_스탯저하있음)
-					PRINTFORML %BASENAME:1%이 {LOCAL:3}, 기초 %BASENAME:1%이 {LOCAL:3 / 2} 줄었다！
-				ELSE
-					PRINTFORML %BASENAME:1%이 {LOCAL:3} 줄었다！
-				ENDIF
-				FONTREGULAR
-				PRINTL 
-
 				SIF BASE:기력 - (LOCAL:3) <= 0
 					LOCAL:3 = BASE:기력
 				BASE:기력 -= LOCAL:3
+
+				$TAIEKI_SKIP
+				
+				SIF GAME_OPTION_CHECK_F(OPTION_스탯저하있음)
+					PRINTFORML 기초 %BASENAME:1%이 {LOCAL:3 / 2} 줄었다！
+				FONTREGULAR
+				PRINTL 
 
 				SIF GAME_OPTION_CHECK_F(OPTION_스탯저하있음)
 					BASE:TARGET:기초기력 -= LOCAL:3 / 2
@@ -585,20 +565,14 @@ IF TCVARn:0 > 0
 					CALL PERFORM_CHEERS_TENTACLE_HIT_HANTEI
 
 				;절대 방어일 경우 심경이 고양으로 변하기 쉽다
-				;심경 변화: 고양
+				;심경 변화：고양
 				IF TCVARn:200 > 0
 					CALL SHINKYOU_CHANGE, "KOUYOU"
-				;심경 변화: 분노 혹은 체념
+				;심경 변화：분노 혹은 체념
 				ELSE
 					CALL SHINKYOU_CHANGE, "IKARI_TEIKAN"
 				ENDIF
 				
-				;상태 이상: 끈적끈적
-				CALL STATE_CHANGE_BETOBETO, 15
-
-				;상태 이상: 배란
-				CALL STATE_CHANGE_HAIRAN, 15
-
 				;피격될 때마다, 기초 방어값에 따라 ＥＸ게이지가 상승한다
 				SIF CFLAG:1 != 2
 					TCVARn:6 += LIMIT(SQRT(MAX(BASE:방어 - 100,0)), 0, 20) + 5
@@ -828,7 +802,7 @@ IF TCVARn:0 > 0
 					;지문: 적 캐릭터의 공격을 절대 방어
 					CALL MESSAGE_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
 					;지문: 세뇌/흑화 캐릭터의 공격이 절대 방어됐다
-					SIF FLAG:110
+					SIF ENEMY_TYPE_CHECK_F("AKUOTI")
 						CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_PERFECT_GUARD
 				ELSE
 					;지문: 적 캐릭터의 사악한 파동이 히트
@@ -913,26 +887,29 @@ IF TCVARn:0 > 0
 				ENDIF
 
 				FONTBOLD
-				PRINTFORML {LOCAL:2}의 피해를 입었다！
-				FONTREGULAR
+				IF TCVARn:200 > 0
+					PRINTFORML {LOCAL:2}의 피해를 무효화했다！
+				ELSE
+					PRINTFORML {LOCAL:2}의 피해를 입었다！
+				ENDIF
 				
-				;절대 방어일 경우 체력 피해량 처리를 스킵한다
+				;절대 방어일 경우 피해량 처리를 스킵한다
 				SIF TCVARn:200 > 0
 					GOTO HADOU_SKIP
 
 				SIF BASE:체력 - (LOCAL:2) <= 0
 					LOCAL:2 = BASE:체력
 				BASE:체력 -= LOCAL:2
-
-				$HADOU_SKIP
 				
-				FONTBOLD
 				PRINTFORML %BASENAME:1%이 {LOCAL:3} 줄었다！
-				FONTREGULAR
 				PRINTL 
+
 				SIF BASE:기력 - (LOCAL:3) <= 0
 					LOCAL:3 = BASE:기력
 				BASE:기력 -= LOCAL:3
+
+				$HADOU_SKIP
+				FONTREGULAR
 				
 				;의상에의 피해
 				CALL CLOTH_BATTLE_DAMAGE, 6
@@ -981,7 +958,7 @@ IF TCVARn:0 > 0
 			;지문: 에너지 과잉 축적
 			CALL MESSAGE_BATTLE_TENTACLE_ATTACK_OVERCHARGED
 			;지문: 세뇌/흑화 캐릭터가 조작 캐릭터의 에너지 과잉 축적을 봤다
-			SIF FLAG:110
+			SIF ENEMY_TYPE_CHECK_F("AKUOTI")
 				CALL MESSAGE_OTHER_BATTLE_TENTACLE_ATTACK_OVERCHARGED
 
 			LOCAL:99 = LOCAL:2 - MAXBASE:체력 * (RESULT - LOCAL:5) / 100
