--- a/ERB/게임_내_전투처리/HANGEKI_STYLE.ERB
+++ b/ERB/게임_내_전투처리/HANGEKI_STYLE.ERB
@@ -3,8 +3,9 @@
 ;ARG:1은 적 커맨드의 성패 판정, 0=피격 1=회피(또는 스침) 2=피격 범위 외 공격 회피
 ;ARG:2는 그 턴에 반격으로 경감시키거나 무효화한 피해량
 
-;공격 범위로부터 벗어나 있었으면 반격 실패 (예를 들어 중거리에 있었는데 근,원 공격이 오면 반격 실패)
-;단, 에어 스트라이크로 피했을 경우에는 반격 성공으로 판정한다
+
+;에어 스트라이크로 피한 공격도 반격 성공으로 판정한다
+;단, 공격 범위로부터 벗어나 있었으면 반격 실패 (예를 들어 중거리에 있었는데 근,원 공격이 오면 반격 실패)
 IF ARG:1 == 2
     IF GETBIT(TCVARn:216, 1) && ((TCVARn:0 == 1 && (TFLAG:11 & 1)) || (TCVARn:0 == 2 && (TFLAG:11 & 2)) || (TCVARn:0 == 3 && (TFLAG:11 & 4)))
     ELSE
@@ -13,7 +14,7 @@ IF ARG:1 == 2
 ENDIF
     
 ;강화 반격이 성공했을 경우 "절대 방어(피해 면역)" 와 함께 확정 반격 성공 판정
-;   *통상 반격도 일반 공격에 한하여 절대 방어에 성공할 가능성이 있다
+;   *통상 반격도 각 공격마다 절대 방어에 성공할 가능성을 가진다
 ;   *휘감기 또는 넘어뜨리기(구속 공격), 거리를벌린다 는 "절대 방어" 불가능
 SIF TCVARn:200 > 0
     GOTO SKIP
@@ -91,12 +92,12 @@ EX:행동포인트 += 2
 
 ;끈적끈적 지속 판정, 강화 반격에 의한 절대 방어로 확정 회복
 IF (TCVARn:12 & 끈적끈적) && TCVARn:200 > 0 && TFLAG:10 != 4 ;&& RAND:100 < MAX(75 - CFLAG:99 * 3, 25) 아무리 그래도 강화 반격에 확률까지 다는 건 선 넘는 것 같아서 뺐다
-	PRINTFORML ○ %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 달라붙은 점액을 털어냈다!
-	PRINTFORML 　 %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% [끈적끈적] 상태로부터 회복했다!
+	PRINTFORML ○ %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 달라붙은 점액을 털어냈다！
+	PRINTFORML 　 %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% [끈적끈적] 상태로부터 회복했다！
 	PRINTW 
 	TCVARn:12 -= 끈적끈적
 ;ELSEIF (TCVARn:12 & 끈적끈적) &&
-;	PRINTFORML × %PRINT_TRANSCALLNAME(TARGET)%은(는) 달라붙은 점액을 털어내는 데에 실패했다!
+;	PRINTFORML × %PRINT_TRANSCALLNAME(TARGET)%은(는) 달라붙은 점액을 털어내는 데에 실패했다！
 ;	PRINTW 
 ENDIF
 
